web/css/subway.css
/*Preloader*/
@-ms-keyframes subway-ripple {
    0%, 100% {
        opacity: 0
    }
    0% {
        width: 0;
        height: 0;
        margin: 0
    }
    33% {
        width: 44%;
        height: 44%;
        margin: -22% 0 0 -22%;
        opacity: 1
    }
    100% {
        width: 88%;
        height: 88%;
        margin: -44% 0 0 -44%
    }
}

@-moz-keyframes subway-ripple {
    0% {
        width: 0;
        height: 0;
        opacity: 0;
        margin: 0
    }
    33% {
        width: 44%;
        height: 44%;
        margin: -22% 0 0 -22%;
        opacity: 1
    }
    100% {
        width: 88%;
        height: 88%;
        margin: -44% 0 0 -44%;
        opacity: 0
    }
}

@-webkit-keyframes subway-ripple {
    0% {
        width: 0;
        height: 0;
        opacity: 0;
        margin: 0
    }
    33% {
        width: 44%;
        height: 44%;
        margin: -22% 0 0 -22%;
        opacity: 1
    }
    100% {
        width: 88%;
        height: 88%;
        margin: -44% 0 0 -44%;
        opacity: 0
    }
}

@-o-keyframes subway-ripple {
    0% {
        width: 0;
        height: 0;
        opacity: 0;
        margin: 0
    }
    33% {
        width: 44%;
        height: 44%;
        margin: -22% 0 0 -22%;
        opacity: 1
    }
    100% {
        width: 88%;
        height: 88%;
        margin: -44% 0 0 -44%;
        opacity: 0
    }
}

@keyframes subway-ripple {
    0% {
        width: 0;
        height: 0;
        opacity: 0;
        margin: 0
    }
    33% {
        width: 44%;
        height: 44%;
        margin: -22% 0 0 -22%;
        opacity: 1
    }
    100% {
        width: 88%;
        height: 88%;
        margin: -44% 0 0 -44%;
        opacity: 0
    }
}

.subway-ripple-css {
    background: 0 0;
    width: 200px;
    height: 200px;
    position: absolute;
    top: -103px;
    left: -75px
}

.subway-alert {
    background: #fff;
    padding: 15px 20px;
    border-left: 5px solid;
}
.subway-alert p:last-child {
    margin-bottom: 0;
}
.subway-alert.subway-alert-info {
    color: #0073aa;
}

.subway-alert.subway-alert-success {
    color: #a3b745;
}

.subway-alert.subway-alert-warning {
    color: #dd823b;
}

.subway-alert.subway-alert-danger {
    color: #e14d43;
}

.subway-ripple-css div {
    position: absolute;
    top: 50%;
    left: 50%;
    margin: 0;
    width: 0;
    height: 0;
    opacity: 0;
    border-radius: 50%;
    border-width: 12px;
    border-style: solid;
    -ms-animation: subway-ripple 2s ease-out infinite;
    -moz-animation: subway-ripple 2s ease-out infinite;
    -webkit-animation: subway-ripple 2s ease-out infinite;
    -o-animation: subway-ripple 2s ease-out infinite;
    animation: subway-ripple 2s ease-out infinite
}

.subway-ripple-css div:nth-of-type(1) {
    border-color: #4a4a4a
}

.subway-ripple-css div:nth-of-type(2) {
    border-color: #191919;
    -ms-animation-delay: 1s;
    -moz-animation-delay: 1s;
    -webkit-animation-delay: 1s;
    -o-animation-delay: 1s;
    animation-delay: 1s
}

/*Preloader End*/

#subway-settings-form .description {
    max-width: 700px;
}

#subway_preloader {
    display: inline-block;
    position: relative;
}

.subway-login-form__form .login-submit {
    position: relative;
    clear: both;
}

.login-remember {
    float: left;
    width: 50%;
}

.login-remember label {
    margin: 0;
}

.subway-login-lost-password {
    float: right;
    width: 50%;
    text-align: right;
}

.subway-login-form {
    max-width: 500px;
}

.gglcptch_recaptcha {
    width: 303px;
    display: block;
    margin: 0 auto 30px;
}

.subway-login-sucessfull {
    color: #673AB7;
    display: block;
}

.subway-role-not-allowed {
    display: block;
    padding: 10px 15px;
    background: #da4709;
    color: #fff;
    margin-bottom: 35px;
    border-radius: 6px;
    box-shadow: 0px 1px 4px #aba3a3;
}

.subway-role-not-allowed p {
    margin: 0;
}

.widget-subway-no-access-message,
.subway-restricted-area {
    background: #eee;
    border: 1px solid #ddd;
    color: #555;
    padding: 5px 10px;
    margin: 1em 0;
}

.entry-content tr.current-user-plan > td,
tr.current-user-plan > td {
    background: #ebffed;
    border: 2px dashed #d4f3d7;
    font-weight: bold;
}


/*Buttons*/


.entry-content .sw-button:visited,
.entry-content .sw-button,
.sw-button {
    box-shadow: inset 0px 1px 0px 0px #54a3f7;
    background: linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
    background-color: #007dc1;
    border-radius: 3px;
    border: 1px solid #124d77;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-weight: bold;
    font-size: 13px;
    padding: 6px 24px;
    text-decoration: none;
    text-shadow: 0px 1px 0px #154682;
}

.sw-button:hover {
    background: linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
    background-color: #0061a7;
}

.sw-button:active {
    position: relative;
    top: 1px;
}


/*Buttons End*/


.widget-subway-no-access-message p:last-child,
.subway-restricted-area p:last-child {
    margin-bottom: 0;
}

.subway-login-form__form #wp-submit {
    background: rgb(17, 39, 43);
    background: linear-gradient(0deg, rgb(14, 133, 228) 0%, rgb(0, 118, 212) 35%, rgb(84, 168, 234) 100%);
    border: 1px solid #455fec;
    color: #906c6c;
    border-radius: 8px;
    padding: 10px 15px;
    line-height: 1em;
    min-width: 150px;
    font-weight: bold;
    color: #fff;
    margin: 0;
}

.login-submit {
    margin: 0;
}

.subway-login-form-form {
    overflow: hidden;
    background: #fdfdfd;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 1px 4px 100px -20px #e2e2e2;
    border: 1px solid #ddd;
}

.subway-login-form-form #user_login,
.subway-login-form-form #user_pass {
    width: 100%;
}

.subway-login-form__actions {
    display: block;
    margin: -20px -20px 20px -20px;
    background: #eaeaea;
    padding: 20px;
    border-bottom: 1px solid #ccc;
    box-shadow: inset 0px -10px 25px -30px #676767;
}

.subway-login-form__actions h3 {
    margin: 0;
    font-weight: bold;
    color: #222;
}

.subway-comment-closed,
.subway-login-form-message .success,
.subway-login-form-message .error,
.sw-form-errors .sw-error {
    background: rgba(255, 0, 0, 0.10);
    padding: 10px;
    color: rgba(255, 0, 0, 0.87);
    border-radius: 5px;
    margin: 20px 0;
    font-size: 1em;
    line-height: 1.5em;
    border: 1px solid rgba(255, 0, 0, 0.20);
    box-shadow: 0 0 0 3px rgba(255, 0, 0, 0.10);
}

.sw-form-errors .sw-error {
    margin: 5px 0;
}

.subway-login-form-message .success {
    background: rgba(76, 175, 80, 0.28);
    color: #4CAF50;
    border: 1px solid #4caf507a;
}

/**
 * Forms
 */

.sw-form label {
    font-weight: normal;
    width: 100%;
    margin-bottom: 0;
}

.sw-block {
    display: block;
}

.sw-field-title {
    font-weight: bold;
    font-size: 1.2em;
    margin-bottom: 7.5px;
}

.sw-field input[type=email],
.sw-field input[type=password],
.sw-field input[type=text] {
    display: block;
    width: 100%;
    max-width: 100%;
    margin: 7.5px 0;
}

.sw-field-howto {
    font-size: 0.90em;
    opacity: 0.75;
}

.subway-form-row {
    margin: 1.5em 0;
}

.subway-checkout-place-order {
    margin: 20px 0;
    text-align: center;
}

.checkout-container {
    text-align: center;
}

.checkout-container img.gateway-img {
    margin: 0 auto;
}
.subway-checkout-place-order .subway-checkout-place-order-button {
    font-size: 1em;
}

.subway-checkout-gateway-banner {
    text-align: center;
    width: 100%;
}


.subway-flex-wrap {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.subway-checkout-review-order {
    padding-left: 0; /*Add some padding for 2 columns*/
}

.subway-flex-wrap .subway-flex-column {
    flex-basis: 100%; /*Change to 50% for 2 columns*/
    flex-grow: 1;
}

.subway-flex-wrap .subway-flex-column-10 { flex-basis:10% }
.subway-flex-wrap .subway-flex-column-20 {flex-basis: 20% }
.subway-flex-wrap .subway-flex-column-30 {flex-basis: 30%}
.subway-flex-wrap .subway-flex-column-40 {flex-basis: 40%}
.subway-flex-wrap .subway-flex-column-50 {flex-basis: 50%}
.subway-flex-wrap .subway-flex-column-60 {flex-basis: 60%}
.subway-flex-wrap .subway-flex-column-70 {flex-basis: 70%}
.subway-flex-wrap .subway-flex-column-80 {flex-basis: 80%}
.subway-flex-wrap .subway-flex-column-90 {flex-basis: 90%}
.subway-flex-wrap .subway-flex-column-100 {flex-basis: 100%}

.subway-checkout-user-info-table,
.subway-checkout-review-order,
.subway-membership-lists {
    margin: 1em 0;

}

.subway-checkout-user-info-table thead,
.subway-checkout-review-order thead,
.subway-membership-lists thead {
    font-size: larger;
}

.subway-checkout-user-info-table th,
.subway-checkout-user-info-table td,
.subway-checkout-review-order th,
.subway-checkout-review-order td,
.subway-membership-lists th,
.subway-membership-lists td {
    border: 1px solid #eee;
    border-left-color: #ddd;
    border-right-color: #ddd;
    padding: 10px;
    background: #f5f5f5;
    font-size: 14px;
}

.subway-checkout-user-info-table th,
.subway-checkout-review-order th,
.subway-membership-lists th {
    background: #f0f0f0;
    border-color: #ddd;
    background: rgba(255,255,255,1);
    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
    background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
    background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
    font-size: 16px;
}
.subway-checkout-user-info-table,
.subway-checkout-review-order,
.subway-membership-lists
{
    border-bottom: 1px solid #ddd;
}

.checkout-container {
    text-align: center;
    background: #fff;
    padding: 20px 20px;
    box-shadow: 0px 0px 20px -5px #d5d5d5;
    border-bottom: 1px solid #eee;
    border-left: 1px solid #eee;
    border-right: 1px solid #eee;
}
.checkout-container:before{
    content: " ";
    background-image: linear-gradient(129deg, #98CD8D 25%, #F6F0CF 25%, #F6F0CF 50%, #98CD8D 50%, #98CD8D 75%, #F6F0CF 75%, #F6F0CF 100%);
    background-size: 51.47px 63.56px;
    height: 3px;
    display: block;
    margin: -20px -20px 0 -20px;
}

ul.subway-user-account-actions {
    text-align: right;
}
ul.subway-user-account-actions li {
    list-style: none;
}

